# forum

./: .gitignore  Cargo.toml
sql/: forum.sql
src/: auth.rs  forum.rs  main.rs  model.rs
static/css/: all.css
templates/: admin_panel.html.tera  auth.html.tera  base.html.tera  create_forum.html.tera  forum.html.tera  forums.html.tera  index.html.tera
