[package]
name = "forum"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = { version = "0.4.44", features = ["serde"] }
paris = { version = "1.5.15", features = ["macros", "timestamps"] }
reqwest = { version = "0.13.3", features = ["json"] }
rocket = "0.5.1"
rocket-include-static-resources = "0.10.5"
rocket_db_pools = { version = "0.2.0", features = ["sqlx_macros", "sqlx_postgres"] }
rocket_dyn_templates = { version = "0.2.0", features = ["tera"] }
serde = "1.0.228"
serde_json = "1.0.149"

sqlx = { version = "0.7", features = ["runtime-tokio", "postgres", "macros", "chrono"] }
